--- a/www/blog/2022-05-26.md
+++ b/www/blog/2022-05-26.md
@@ -27,13 +27,40 @@ KlipTok is a website that I started building while streaming live on Twitch in N
 
  Behind the scenes, KlipTok monitors Twitch for new clips from streamers that are signed up with the site and indexes them.  The clips are then transcribed and searchable on the site.  Visitors can view, like, and comment on clips.  Additionally, anyone can create playlists of clips to share with their friends.
 
+ After the first 18 months of running KlipTok, the application currently manages almost 12 million clips, totalling nearly 60 GB of data in the index.  You can view the live dashboard at [kliptok.com/status](https://kliptok.com/status) to see the current status of the application.
+
+ ![Screenshot of the KlipTok dashboard showing almost 12 million clips](../static/img/series/w4d3/kliptok-dashboard.png)
+
  ## KlipTok Chooses Azure Static Apps
 
  To make the KlipTok application and help demonstrate Blazor running at scale in a large application, I chose Azure Static Apps.  This allows the application to scale the HTTP services to deliver content into the browser while delivering a high-performance experience with the Blazor application running in the browser on top of WebAssembly. 
 
- KlipTok also operates a second Azure Function service called the 'BackOffice' that performs the synchronization of Twitch clips and other data aggregation tasks.  When new channels are added to KlipTok for monitoring, the BackOffice service is triggered with a message on Azure Service Bus to add the channel and begin processing their clips for the index.
+ KlipTok also operates a second Azure Function service called the 'BackOffice' that performs the synchronization of Twitch clips and other data aggregation tasks.  When new channels are added to KlipTok for monitoring, the BackOffice service is triggered with a message on Azure Service Bus to add the channel and begin processing their clips for the index.  
+ 
+ We also use this Backoffice functions app to create an ML.NET model that is used to recommend streamers to the user.  The model is trained on the collection of channels that KlipTok users follow and recommends channels to users based on other users who follow the same channels.	The model is updated every day with new data to help make more accurate recommendations to logged in KlipTok users. 
 
- We have a small problem with Blazor Web Assembly and Azure Static Websites because the search engines and social media sites do not know how to crawl and present web assembly generated content.  To solve this, I added Azure Frontdoor to the site with an Azure App Service we ironically call the 'Static Site'.
+ By Twitch's terms of service, no videos are allowed to be shipped off of their platform for the first 24 hours after they are recorded.  This means that the clips should be referenced and embedded from Twitch using their own clip player, saving KlipTok from having to download, stor and KlipTok can deliver appropriate SEO optimized content as well as open-graph cards appropriate for Twitter, Facebook, LinkedIn and other sites.
 
- -> DIAGRAM <-  
+ We do have a small problem with Blazor Web Assembly and Azure Static Websites because the search engines and social media sites do not know how to crawl and present web assembly generated content.  To solve this, I added Azure Frontdoor to the site with an Azure App Service we ironically call the 'Static Site'.  With a few rules added to Azure Frontdoor to detect bots, they can be redirected to the static site and KlipTok can deliver appropriate SEO optimized content as well as open-graph cards appropriate for Twitter, Facebook, LinkedIn and other sites.
 
+ ![Simplified Diagram of the KlipTok System Architecture](../static/img/series/w4d3/kliptok-architecture-simplified.png)
+
+## Why Azure Static Web Sites?
+
+When KlipTok was originally conceived, I wanted to spend very little money and allow the site to scale easily with new traffic as it grows.  As a C# and Blazor developer, this gave me the perfect intersection of my favorite technologies, keep costs low, and start to develop an application that demonstrates the capabilities of Blazor with a **VERY** large dataset.
+
+Over time, the system components of KlipTok have matured and been swapped out.  Azure Table Storage gave way to MySQL and has been since replaced by RavenDb.  The Azure Functions were originally communicating using Azure Queues, and many of them are now using Azure Service Bus.
+
+This maturing of the system components has allowed me to build and understand how other customers are using Azure and how we can improve the product to make developers of systems like KlipTok happier and more productive.
+
+## Azure Static Web Apps and Blazor - Made for each other
+
+I've been very happy with the combination of Blazor and Azure Static Web Apps.  The ability to build a Blazor application and know that I will always have APIs scaling to meet my customers needs is a huge plus.
+
+Blazor Web Assembly uses an HttpClient to communicate with web servers, and in the case of an Azure Static Web App it communicated with an http triggered function.  This allows me to dramatically simplify the definition and interaction of front-end code and the back-end code.
+
+An example of this interaction is when a user clicks the **Like** button on a clip, the Blazor application can post a message to the hosted function to update the like count.  The function then updates the like count in RavenDb and then updates the UI with the new like count.  The Blazor application doesn't need to wait for the function to complete before updating the UI, as it can just add or subtract one from the like count.
+
+## Summary
+
+KlipTok has been an absolute joy to build and the journey to deliver it has been a great success.  I'm very excited to continue working on KlipTok and continue to grow the application while discovering and demonstrating more cool Blazor and Azure features.  Click over to [KlipTok](https://kliptok.com) and login with your Twitch account to have KlipTok start showing you clips from your favorite creators.
