Added a paragraph explaining Twitch and clips

--- a/www/blog/2022-05-26.md
+++ b/www/blog/2022-05-26.md
@@ -21,7 +21,9 @@ Yesterday we talked about Custom Vision Today we'll explore the KlipTok applicat
 
 ## KlipTok Makes Twitch Videos Searchable
 
-KlipTok is a website that I started building while streaming live on Twitch in November 2019.  At the time, I wanted to build a website that would allow folks to discover Twitch clips from their favorite creators in the same way that they navigate and interact with TikTok.
+KlipTok is a website that I started building while streaming live on Twitch in November 2019.  At the time, I wanted to build a website that would allow folks to discover Twitch clips from their favorite creators in the same way that they navigate and interact with TikTok.  
+
+[Twitch](https://twitch.tv) is a live-streaming service that many people use to watch folks play video games.  When something interesting happens on Twitch, viewers can isolate a clip (up to 60 seconds long) from the stream and share it with their friends.  These clips are often fun and interesting, but typically they are not discoverable.  This is KlipTok's goal - index and make those clips more available to everyone.
 
 ![Screenshot of the KlipTok Website](../static/img/series/w4d3/kliptok-site.png)
 
