--- a/www/blog/2022-05-25.md
+++ b/www/blog/2022-05-25.md
@@ -1,6 +1,6 @@
 ---
 slug: practices-cognitive-services
-title: "#24: Cognitive Services Vision & SWA"
+title: "#24: Cognitive Services & SWA"
 authors: [yönet]
 tags: [swa, 30days, best-practices, AI, ComputerVision, CognitiveServices]
 draft: true
@@ -71,7 +71,7 @@ You can read how I’ve trained my custom model and built an [No Code prototype 
 Using any of these APIs works pretty much the same way if you are working with an image instead of a video to analyze:
 
 -   Sign into your azure account or [sign up for $200 free credit](https://azure.microsoft.com/free/?WT.mc_id=javascript-57623-ayyonet).
--   [Create an Azure Cognitive Services or Specific service resource]() and get the key and endpoint information.
+-   [Create an Azure Cognitive Services or Specific service resource](https://docs.microsoft.com/en-us/azure/cognitive-services/cognitive-services-apis-create-account?WT.mc_id=javascript-57623-ayyonet) and get the key and endpoint information.
 -   You install the related service’s [JavaScript SDK](https://www.npmjs.com/~azure-sdk) and [Azure Identity SDK](https://www.npmjs.com/package/@azure/identity).
 -   You take a picture or upload an image.
 -   Initialize an AzureCredentials object using your resource key.
