Week 4, Day 3 => Reviewed

--- a/www/blog/2022-05-25.md
+++ b/www/blog/2022-05-25.md
@@ -3,7 +3,7 @@ slug: practices-cognitive-services
 title: "#24: Cognitive Services & SWA"
 authors: [yönet]
 tags: [swa, 30days, best-practices, AI, ComputerVision, CognitiveServices]
-draft: true
+draft: false
 ---
 
 <head>
@@ -19,38 +19,37 @@ draft: true
 
 Welcome to `Week 4, Day 3` of **#30DaysOfSWA**!!
 
-Yesterday we talked about adding search to a website using pre-trained Azure AI models. Today we'll explore how to use Vision AI Services.
+We continue our Best Practices week by looking at year another Azure Services integration option for your Azure Static Web Apps deployment. Yesterday we talked about adding search to your website using pre-trained Azure AI models. Today we'll discuss how you can use Vision AI Services.
 
 ## What We'll Cover
-
--   What is Azure Computer Vision?
--   What are the tools for training a Custom Vision AI model?
--   Best practices for architecting your AI?
--   How to deploy your APIs and Static Web App(SWA)
--   **Exercise** [Build and deploy a SWA to analyse images](https://docs.microsoft.com/samples/azure-samples/js-e2e-client-cognitive-services/build-and-deploy-a-static-web-app-to-azure/?WT.mc_id=javascript-68057-ayyonet)
--   **Resource(s):**
-
-        * [Azure Custom Vision Documentation](https://aka.ms/AzureCustomVision)
-        * [Learn Modules: Microsoft Azure AI Fundamentals: Explore computer vision](https://docs.microsoft.com/en-us/learn/paths/explore-computer-vision-microsoft-azure/?WT.mc_id=javascript-68057-ayyonet)
-        * [SWA Next.js Documentation](https://docs.microsoft.com/azure/static-web-apps/deploy-nextjs?WT.mc_id=javascript-68057-ayyonet)
-
-    ![](../static/img/series/banner.png)
 
 -   What are Azure Vision Services
 -   How to get started building your AI applications
 -   How to use the JavaScript AI SDKs
 -   How to analyze a document using Form Recognizer
 -   How to deploy your APIs and Static Web App(SWA)
+-   **Exercise** [Build and deploy a SWA to analyse images](https://docs.microsoft.com/samples/azure-samples/js-e2e-client-cognitive-services/build-and-deploy-a-static-web-app-to-azure/?WT.mc_id=javascript-68057-ayyonet)
+
+## Resources
+
+* [Azure Custom Vision](https://aka.ms/AzureCustomVision) - Documentation
+* [Azure AI Fundamentals: Explore computer vision](https://docs.microsoft.com/en-us/learn/paths/explore-computer-vision-microsoft-azure/?WT.mc_id=javascript-68057-ayyonet) - Learn Module
+* [SWA Next.js ](https://docs.microsoft.com/azure/static-web-apps/deploy-nextjs?WT.mc_id=javascript-68057-ayyonet) - Documentation
+
+
+![](../static/img/series/24-banner.png)
+
+
 
 ## What are Azure Vision Services?
 
-[Azure AI Vision Services](https://docs.microsoft.com/azure/cognitive-services/what-are-cognitive-services?WT.mc_id=javascript-57623-ayyonet) are the service that gives you Terminator-like powers.
+Azure AI Vision is part of [Azure Cognitive Services](https://docs.microsoft.com/azure/cognitive-services/what-are-cognitive-services?WT.mc_id=javascript-57623-ayyonet) - cloud-based AI services that give you Terminator-like powers.
 
 ![](https://media.giphy.com/media/NHUaA15Nk910hFczxu/giphy.gif)
 
-You can take a picture and [analyze it to describe the image, detect objects, landmarks and famous people](https://docs.microsoft.com/azure/cognitive-services/computer-vision/quickstarts-sdk/image-analysis-client-library?tabs=visual-studio&pivots=programming-language-javascript&WT.mc_id=javascript-57623-ayyonet) or [your users](https://docs.microsoft.com/azure/cognitive-services/face/build-enrollment-app?tabs=android&WT.mc_id=javascript-57623-ayyonet), [read documents](https://docs.microsoft.com/azure/cognitive-services/computer-vision/quickstarts-sdk/client-library?tabs=visual-studio&pivots=programming-language-javascript&WT.mc_id=javascript-57623-ayyonet) and scan information on an ID or a business card. All of these superpowers are available to you an API call away using Azure’s Cognitive and Applied AI Services. Let’s dive into what we can build and what we can customize.
+You can take a picture and [analyze it to describe the image, detect objects, landmarks and famous people](https://docs.microsoft.com/azure/cognitive-services/computer-vision/quickstarts-sdk/image-analysis-client-library?tabs=visual-studio&pivots=programming-language-javascript&WT.mc_id=javascript-57623-ayyonet) or [your users](https://docs.microsoft.com/azure/cognitive-services/face/build-enrollment-app?tabs=android&WT.mc_id=javascript-57623-ayyonet), [read documents](https://docs.microsoft.com/azure/cognitive-services/computer-vision/quickstarts-sdk/client-library?tabs=visual-studio&pivots=programming-language-javascript&WT.mc_id=javascript-57623-ayyonet) and scan information on an ID or a business card. All of these superpowers are available to you - an API call away - using Azure’s Cognitive and Applied AI Services. Let’s dive into what we can build and what we can customize.
 
-## How to get started building your AI applications
+## Get Started building AI apps
 
 If you are planning to infuse your application with AI, the first place you need to look at is our [Applied AI Services](https://docs.microsoft.com/azure/applied-ai-services/?WT.mc_id=javascript-57623-ayyonet). Applied AI services are solving the most common use cases and build on top of our Cognitive Services. In terms of Vision related services, we have two Applied AI Services, [Form Recognizer](https://docs.microsoft.com/azure/applied-ai-services/form-recognizer/?WT.mc_id=javascript-57623-ayyonet) and [Video Analyzer](https://docs.microsoft.com/azure/azure-video-analyzer/?WT.mc_id=javascript-57623-ayyonet).
 
@@ -70,15 +69,15 @@ You can read how I’ve trained my custom model and built an [No Code prototype 
 
 Using any of these APIs works pretty much the same way if you are working with an image instead of a video to analyze:
 
--   Sign into your azure account or [sign up for $200 free credit](https://azure.microsoft.com/free/?WT.mc_id=javascript-57623-ayyonet).
+-   Sign into your Azure account or [sign up for $200 free credit](https://azure.microsoft.com/free/?WT.mc_id=javascript-57623-ayyonet).
 -   [Create an Azure Cognitive Services or Specific service resource](https://docs.microsoft.com/en-us/azure/cognitive-services/cognitive-services-apis-create-account?WT.mc_id=javascript-57623-ayyonet) and get the key and endpoint information.
--   You install the related service’s [JavaScript SDK](https://www.npmjs.com/~azure-sdk) and [Azure Identity SDK](https://www.npmjs.com/package/@azure/identity).
--   You take a picture or upload an image.
+-   Install the related service’s [JavaScript SDK](https://www.npmjs.com/~azure-sdk) and [Azure Identity SDK](https://www.npmjs.com/package/@azure/identity).
+-   Take a picture or upload an image.
 -   Initialize an AzureCredentials object using your resource key.
--   Initialize a Client object using the azure credential object and the endpoint.
--   Use the client’s analyze method to get make an API call and wait for the response.
+-   Initialize a Client object with the Azure credential object & endpoint.
+-   Use the client’s analyze method to make an API call, wait for response.
 
-The class and method names change, like DocumentAnalysisClient for Form Recognizer, PredictionAPIClient for Custom Vision or FaceClient for facial recognition. If you are training a custom model or using a specific model for form recognizer, you have couple of things that you will do but the most important part of it is taken care of by our SDK functionality.
+The class and method names change, like `DocumentAnalysisClient` for Form Recognizer, `PredictionAPIClient` for Custom Vision or `FaceClient` for facial recognition. If you are training a custom model or using a specific model for form recognizer, you have couple of things that you will do but the most important part of it is taken care of by our SDK functionality.
 
 ## How to analyze a document using Form Recognizer
 
@@ -131,3 +130,10 @@ I hope you are inspired to enhance your applications with Azure Applied AI or Co
 [![MS Build 2022 AI Session Demo](https://media.giphy.com/media/YSsOvebCkyeglsqsaQ/giphy.gif)](https://youtu.be/L10-LnbXxEo)
 
 [Reach out to me on twitter](https://twitter.com/AysSomething) if you have questions, you want to share what you build or discuss your ideas.
+
+
+## Exercise
+
+Want to explore Azure Cognitive Service integrations with your Azure Static Web App? Try walking through one of these tutorials to get hands-on experience with development:
+ * [Build and deploy a SWA to analyse images](https://docs.microsoft.com/samples/azure-samples/js-e2e-client-cognitive-services/build-and-deploy-a-static-web-app-to-azure/?WT.mc_id=javascript-68057-ayyonet) - build a React application that analyzes an image using Azure Cognitive Services (Computer Vision) - deploy the app to Azure Static Web Apps.
+ * [Machine Learning With Custom Vision](http://aka.ms/ws-customvision) - complete this workshop where you learn to build a model to detect dog breeds using the Custom Vision API, then deploy it to Azure Static Web Apps with an Azure Functions backend.
