Fixing broken link

--- a/www/blog/2022-05-25.md
+++ b/www/blog/2022-05-25.md
@@ -61,7 +61,7 @@ I won’t wish that for any of you and that’s why your first stop should be [A
 
 A great way to start playing with these APIs and explore your specific use case is through [Vision Studio Preview](https://preview.vision.azure.com/) or [Form Recognizer Studio preview](https://formrecognizer.appliedai.azure.com/studio). For example, I was wondering if I can recognize Mixed Reality devices using Computer Vision. Since these devices are very new and still not a common object, they were not recognized by our all-purpose object detection model. Before building an app, I was able to easily see that I need to train a custom model. You can check and see your logo or your product is easily recognizable or you should start training a custom model on the Studio without writing any code and find the code samples right inside the Studio.
 
-If the object you want to detect is not recognized, you can train a custom model through [customvision.ai](customvision.ai) and deploy it. You will get a custom API endpoint to call and your client implementation won’t be different than using any other service. There are couple of best practices for training a custom model. Most importantly, you need a variety of images in different contexts. For example if you want to find Waldo, you can’t just train with Waldo’s profile picture, you need to also use his pictures in a crowd.
+If the object you want to detect is not recognized, you can train a custom model through [customvision.ai](https://customvision.ai) and deploy it. You will get a custom API endpoint to call and your client implementation won’t be different than using any other service. There are couple of best practices for training a custom model. Most importantly, you need a variety of images in different contexts. For example if you want to find Waldo, you can’t just train with Waldo’s profile picture, you need to also use his pictures in a crowd.
 
 You can read how I’ve trained my custom model and built an [No Code prototype here](https://medium.com/microsoftazure/no-code-ai-app-with-azure-cognitive-services-custom-vision-and-power-apps-ca47c019dcd0) using [Power Apps AI Builder](https://docs.microsoft.com/ai-builder/overview?WT.mc_id=javascript-57623-ayyonet)
 
