Updating May 29 article topic/author

--- a/www/blog/2022-05-29.md
+++ b/www/blog/2022-05-29.md
@@ -1,15 +1,22 @@
 ---
-slug: practices-tips-tricks
-title: "#28: SWA Tips & Tricks"
-authors: []
+slug: practices-full-stack-react
+title: "#28: Full-Stack App: React + SWA + Mongoose + CosmosDB"
+authors: [christopher]
 tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
 Welcome to `Week 4, Day 7` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+We're at the last post of the series, so let's close the loop to where we started on Day 1. We started by talking about End-to-End Developer Experiences built on Azure Static Web Apps - and continued with a series of posts exploring various Azure service integrations that showcase this vision.
 
+Wouldn't it be great if you could have one end-to-end development example that you could use as a **starter** for your next prototype? Let's end this week with the perfect example. Today we'll look at an end-to-end developer workflow for a full-stack app:
+ * Front-end built with React
+ * Back-end built with Azure Functions
+ * Deployed using Azure Static Web Apps
+ * With a MongoDB database 
+ * Accessed using Mongoose via CosmosDB API.
+ * (Optionally, with Playwright testing)
 
 ## What We'll Cover
  * 
