Week 4, Day 6 => Ready

--- a/www/blog/2022-05-28.md
+++ b/www/blog/2022-05-28.md
@@ -1,27 +1,30 @@
 ---
 slug: practices-cosmosdb
-title: "#27: Build a video conferencing web app with Azure Communication Services"
-authors: [davrous]
+title: "#27: Video Conf with ACS & SWA"
+authors: [david]
 tags: [swa, 30days, best-practices]
 draft: true 
 ---
 
 Welcome to `Week 4, Day 6` of **#30DaysOfSWA**!! 
 
-Yesterday we talked about .... Today we'll explore ...
+Yesterday, we saw one of the first examples of integrating Azure Static Web Apps with multiple Azure Services to deliver a real-world experience for users. Today, we explore another great example of an end-to-end developer workflow that integrates Azure Static Web Apps with multiple services to deliver a rich user experience. Specifically, we'll learn how to **build a   video conferencing web application with Azure Communication Services and Azure Static Web Apps**
 
 
 ## What We'll Cover
- * What is Azure Communications Services aka ACS?
- * Building an authentication layer with Azure Function, CosmosDB & Static Web App
- * A Static Web App hosting a Metaverse?!?
- * **Exercise** deploy the sample yourself following the step-by-step tutorial
+ * What is Azure Communications Services (ACS)?
+ * The Video Conference Authentication Workflow
+    - Azure Static Web Apps for social authentication
+    - Azure CosmosDB to store ACS identity information
+    - Azure Functions to map social auth to ACS identity
+ * A Static Web App - hosting a Metaverse? 🤯
+ * **Exercise** Deploy the sample yourself following the step-by-step tutorial
 
 ![](../static/img/series/banner.png)
 
-## What is Azure Communications Services aka ACS?
+## What is Azure Communications Services (ACS)?
 
-[Azure Communication Services (ACS)](https://docs.microsoft.com/en-us/azure/communication-services/overview) is a set of rich communication, video, and SMS APIs to deploy your applications across any device, on any platform. If you want to enable emails, chat, audio/video conferencing, phone calls or SMS inside an existing app, this service is right for you. You can view it as your building blocks to create your own custom version of Microsoft Teams, it uses the same underlying infrastructure. This [CPaaS](https://www.forbes.com/advisor/business/software/what-is-cpaas/) (Communications Platform As A Service) will manage scalability, quality & availability of this service for you. This platform is also built on top of our secure and compliant cloud.  
+[Azure Communication Services (ACS)](https://docs.microsoft.com/en-us/azure/communication-services/overview) is a set of **rich communication, video, and SMS APIs** to deploy your applications across any device, on any platform. If you want to enable emails, chat, audio/video conferencing, phone calls or SMS inside an existing app, this service is right for you. You can view it as your building blocks to create your own custom version of Microsoft Teams, it uses the same underlying infrastructure. This [CPaaS](https://www.forbes.com/advisor/business/software/what-is-cpaas/) (Communications Platform As A Service) will manage scalability, quality & availability of this service for you. This platform is also built on top of our secure and compliant cloud.  
 
 Watch this short video for a quick introduction 👇🏼
 
@@ -31,24 +34,30 @@ Of course, this service comes with a price. You can find the cost of each servic
 
 ACS exposes its services via various SDKs: [Azure Communication Services – Samples and Tools](https://github.com/Azure/communication) available for JavaScript, .NET, Java, Android, iOS & Python developers. 
 
-You can also optionally use this on top of the ACS UI library: [Overview – Page ⋅ Storybook](https://azure.github.io/communication-ui-library/?path=/story/overview--page) which consists of React-based components implementing the [Microsoft Fluent Design](https://developer.microsoft.com/fluentui/) to help you build visually engaging web apps. The best sample mixing all of these concepts is [Group calling hero sample – An Azure Communication Services sample overview](https://docs.microsoft.com/en-us/azure/communication-services/samples/calling-hero-sample?pivots=platform-web). 
+You can also optionally use this on top of the ACS UI library: [Overview – Page ⋅ Storybook](https://azure.github.io/communication-ui-library/?path=/story/overview--page) which consists of React-based components implementing the [Microsoft Fluent Design](https://developer.microsoft.com/fluentui/) to help you build visually engaging web apps. The best sample mixing all of these concepts is **[Group calling hero sample – An Azure Communication Services sample overview](https://docs.microsoft.com/en-us/azure/communication-services/samples/calling-hero-sample?pivots=platform-web)**. 
 
-To give you a brief idea, have a look to this 2 min video tutorial. It will show you how to get the internal ACS authentication token to connect to its infrastructure. Then, I’ll join an existing Teams meeting using a simple web page and the ACS JavaScript SDK:
+To give you a brief idea, watch this 2 min video tutorial that shows you how to get the internal ACS authentication token to connect to its infrastructure. I can then join an existing Teams meeting using a simple web page and the ACS JavaScript SDK:
 
 <iframe width="560" height="315" src="https://www.youtube.com/embed/FFBBLUtRyZw" title="YouTube video player" frameborder="0"  allowfullscreen></iframe> 
 
-If you’d like to follow it at home, you simply need to:
--	[Create an Azure Communication Services resource in your Azure Portal](https://docs.microsoft.com/en-us/azure/communication-services/quickstarts/create-communication-resource?tabs=windows&pivots=platform-azp) 
--	Navigate to https://aka.ms/acsquicktest and follow the video tutorial above.
 
-You’ll discover that, by default, Azure Communication Services is providing a basic authentication & identity layer. You need to build on top of it to connect your own identity platform. Let’s see how to do that!
+**Want to follow along at home?** You simply need to:
+ * [Create an Azure Communication Services resource in your Azure Portal](https://docs.microsoft.com/en-us/azure/communication-services/quickstarts/create-communication-resource?tabs=windows&pivots=platform-azp) 
+  * Navigate to https://aka.ms/acsquicktest and follow the video tutorial above.
+
+You’ll discover that, by default, Azure Communication Services provides the basic authentication & identity layer. But you need to build on top of it to connect your own identity platform. Let’s see how to do that, next!
 
 ## Building an authentication layer with Azure Function, CosmosDB & Static Web App
+
+### 1. Azure Static Web Apps - social authentication
 Well, it turns out that SWA provides an awesome out of the box authentication experience. To know more about it, please read: [Authentication and authorization for Azure Static Web Apps](https://docs.microsoft.com/en-us/azure/static-web-apps/authentication-authorization?tabs=invitations). In seconds, without any additional code required, you’ll have an authentication layer provided to you!
 
-We’re going to use it as our front end to welcome and authenticate our users. Then, we will map their social account identity with the internal ACS identity via an Azure Function. The Azure Function will store the mapping into a small CosmosDB table. 
+We’re going to use it as our front end to welcome and authenticate our users. 
 
-Here’s the flow. First, you’ll land on a page asking you to choose your favorite social provider:
+### 2. Azure Functions - map to ACS identity
+Then, we will map their social account identity with the internal ACS identity via an Azure Function. The Azure Function will store the mapping into a small CosmosDB table. Here’s the flow. 
+
+First, you’ll land on a page asking you to choose your favorite social provider:
 
 ![Screenshot of the Static Web App sample showing the Twitter, Github, Microsoft & Google logos](../static/img/series/w4d6/ACSSWA001.jpg)
 
@@ -59,6 +68,8 @@ Then, once authenticated, you’ll be directly connected to the Azure Communicat
 You see that the UI shows how my Twitter account, *davrous@twitter*, is mapped to the internal ACS user ID *8:acs:4ba98fcc*… that you should normally not share to the users of course 😉. 
 
 Thanks to that, you’re ready to call friends and colleagues immediately or join a Teams meeting via simply using their social account email address as the person to call.
+
+### 3. Azure Functions + CosmosDB Binding
 
 Let’s have a look to the Azure Function code enabling this scenario. First, you can see in the [function.json file](https://github.com/davrous/acsauth/blob/main/api/users/function.json) that I’m using the CosmosDB binding feature. To know more about this feature:
 -	[Azure Cosmos DB input binding for Functions 2.x and higher](https://docs.microsoft.com/en-us/azure/azure-functions/functions-bindings-cosmosdb-v2-input?tabs=in-process%2Cfunctionsv2&pivots=programming-language-javascript)
@@ -82,6 +93,8 @@ If you’re interested in the ACS identity concepts, please read:
 -	[Identity model - An Azure Communication Services concept](https://docs.microsoft.com/en-us/azure/communication-services/concepts/identity-model)
 -	[Quickstart - Create and manage access tokens - An Azure Communication Services quickstart](https://docs.microsoft.com/en-us/azure/communication-services/quickstarts/access-tokens?pivots=programming-language-javascript)
 
+
+### 4. CosmosDB - stores ACS identity data
 Now, let’s have a look to what’s stored in the CosmosDB table thanks to the Azure Portal:
 
 ![Screenshot of Azure Portal, in the CosmosDB blade showing the content of the table](../static/img/series/w4d6/ACSSWA003.jpg)
@@ -96,9 +109,11 @@ The beauty of the Azure Function binding feature is that I didn’t have to writ
 
 With few lines of code, I’ve been able to create a small authentication layer on top of ACS to create users mapped to ACS internal identity. With the out of the box Static Web App authentication experience, I didn’t even need to write any code to authenticate users with their social identity!
 
-## A Static Web App hosting a Metaverse?!?
+## A Static Web App hosting a Metaverse? 🤯
 
-In the same sample, I’ve been building on top of the architecture described just above a small metaverse using [Babylon.js](https://www.babylonjs.com), an open source & free WebGL engine I’ve been contributing to. The logic is identical to what I’ve described up to now. Thanks to the SWA, I’m authenticating the user using his social profile. But then, I can do the video call to another ACS user or someone in Teams from a 3D scene. And everything is waayyy cooler inside a 3D scene, right? 
+In the same sample, I’ve been building on top of the architecture described just above a small metaverse using [Babylon.js](https://www.babylonjs.com), an open source & free WebGL engine I’ve been contributing to. The logic is identical to what I’ve described up to now. 
+
+Thanks to the SWA, I’m authenticating the user using his social profile. But then, I can do the video call to another ACS user or someone in Teams from a 3D scene. And everything is waayyy cooler inside a 3D scene, right? 
 
 ![Screenshot of the Static Web App with a 3D scene of a museum loaded](../static/img/series/w4d6/ACSSWA004.jpg)
 
