--- a/www/blog/2022-05-28.md
+++ b/www/blog/2022-05-28.md
@@ -8,7 +8,7 @@ draft: true
 
 Welcome to `Week 4, Day 6` of **#30DaysOfSWA**!! 
 
-Yesterday, we saw one of the first examples of integrating Azure Static Web Apps with multiple Azure Services to deliver a real-world experience for users. Today, we explore another great example of an end-to-end developer workflow that integrates Azure Static Web Apps with multiple services to deliver a rich user experience. Specifically, we'll learn how to **build a   video conferencing web application with Azure Communication Services and Azure Static Web Apps**
+In an earlier example this week, we looked at a real-world case study with KlipTok, involving Azure Static Web Apps integration with _multiple_ backend services, to deliver the desired user experience. Today we look at another great example of an end-to-end development workflow that involves multiple service integrations - this time with a focus on deliver a rich video conferencing web application experience. Let's learn how to build this with **a workflow that involves Azure Static Web Apps, Azure Functions, Azure CosmosDB - and Azure Communications Services (ACS)**.
 
 
 ## What We'll Cover
