Week 4, Day 5 => Reviewed

--- a/www/blog/2022-05-27.md
+++ b/www/blog/2022-05-27.md
@@ -3,14 +3,14 @@ slug: practices-byo-functions
 title: "#26: Azure Functions & SWA"
 authors: [craig]
 tags: [swa, 30days, best-practices]
-draft: true 
+draft: false
 ---
 
 <head>
   <meta name="twitter:url" content="https://www.azurestaticwebapps.dev/blog/practices-byo-functions" />
   <meta name="twitter:title" content="#24: Custom Vision & SWA" />
   <meta name="twitter:description" content="Join @CraigShoemaker on #30DaysOfSWA as he walks us through the what-why-how, of 'Bringing Your Own Functions' to @AzureStatic Apps!" />
-  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/25-banner.png" />
+  <meta name="twitter:image" content="https://www.azurestaticwebapps.dev/assets/images/26-banner.png" />
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:creator" content="@nitya" />
   <meta name="twitter:site" content="@AzureStaticApps" /> 
@@ -33,7 +33,7 @@ Today, we'll explore the other option **Bring Your Own Functions** - where you c
 * **Resources**: Building Serverless apps with Azure Functions
 * **Exercise**: Complete [this learning module](https://docs.microsoft.com/en-us/learn/modules/automatic-update-of-a-webapp-using-azure-functions-and-signalr/), add real-time updates to your SWA!
 
-![](../static/img/series/banner.png)
+![](../static/img/series/26-banner.png)
 
 ## What does "Bring Your Own Functions" (BYOF) mean?
 
